Thu Dec 06 12:27:53 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight_doctest1.txt: Don't display the output of the
	  highlighter - we're just testing that it returns promptly.

Thu Dec 06 12:19:55 UTC 2007  Tom Mortimer <tom@lemurconsulting.com>

	* xappy/highlight.py,xappy/highlight_doctest1.txt: Simplified
	  regexp to work around freezing problem. Less procise now but
	  probably good enough temporarily. Fixed test case.

Thu Dec 06 07:38:49 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight_doctest1.txt: Add testcase of a pathological
	  document for highlighting - the regular expression currently
	  takes a ridiculously long time to process this.

Thu Dec 06 07:29:28 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/runtests.py: Fix for running with debug logging.

Wed Dec 05 15:57:41 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Improve a documentation comment.

Mon Dec 03 18:01:51 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
	  Add ability to set a callback on SearchConnection to be called
	  when the object is closed (even if this is an implicit close due
	  to being deleted).

Thu Nov 29 17:58:18 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Expose an API for setting the minimum
	  weight or percentage allowed for a result to be returned; this is
	  done by supplying the percentcutoff or weightcutoff parameters to
	  SearchConnection.search()
	* xappy/searchconnection_doctest2.txt: Test the weight and
	  percentage cutoff parameters.

Wed Nov 28 10:18:43 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix returning of empty facet value,
	  which translates into numeric range from -inf to -inf: this is
	  returned when some documents do not have an entry in a numeric